@@ -23,8 +23,13 @@
 #
 # ==================================================================================================
 
-# CMake project
 cmake_minimum_required(VERSION 2.8.10)
+
+# Overrides for MSVC static runtime
+set(CMAKE_USER_MAKE_RULES_OVERRIDE ${CMAKE_CURRENT_SOURCE_DIR}/cmake/c_flag_overrides.cmake)
+set(CMAKE_USER_MAKE_RULES_OVERRIDE_CXX ${CMAKE_CURRENT_SOURCE_DIR}/cmake/cxx_flag_overrides.cmake)
+
+# CMake project details
 project("cltune" CXX)
 set(cltune_VERSION_MAJOR 2)
 set(cltune_VERSION_MINOR 2)
@@ -54,40 +59,41 @@ set(CMAKE_INSTALL_RPATH_USE_LINK_PATH false) # Don't add the automatically deter
 # ==================================================================================================
 
 # Compiler-version check (requires at least CMake 2.8.10)
-if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
-  if (CMAKE_CXX_COMPILER_VERSION VERSION_LESS 4.7)
+if(CMAKE_CXX_COMPILER_ID STREQUAL GNU)
+  if(CMAKE_CXX_COMPILER_VERSION VERSION_LESS 4.7)
     message(FATAL_ERROR "GCC version must be at least 4.7")
   endif()
-elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
-  if (CMAKE_CXX_COMPILER_VERSION VERSION_LESS 3.3)
+elseif(CMAKE_CXX_COMPILER_ID STREQUAL Clang)
+  if(CMAKE_CXX_COMPILER_VERSION VERSION_LESS 3.3)
     message(FATAL_ERROR "Clang version must be at least 3.3")
   endif()
-elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "AppleClang")
-  if (CMAKE_CXX_COMPILER_VERSION VERSION_LESS 5.0)
-    message(FATAL_ERROR "Clang version must be at least 5.0")
+elseif(CMAKE_CXX_COMPILER_ID STREQUAL AppleClang)
+  if(CMAKE_CXX_COMPILER_VERSION VERSION_LESS 5.0)
+    message(FATAL_ERROR "AppleClang version must be at least 5.0")
   endif()
-elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Intel")
-  if (CMAKE_CXX_COMPILER_VERSION VERSION_LESS 14.0)
+elseif(CMAKE_CXX_COMPILER_ID STREQUAL Intel)
+  if(CMAKE_CXX_COMPILER_VERSION VERSION_LESS 14.0)
     message(FATAL_ERROR "ICC version must be at least 14.0")
   endif()
-elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
-  if (CMAKE_CXX_COMPILER_VERSION VERSION_LESS 18.0)
+elseif(MSVC)
+  if(CMAKE_CXX_COMPILER_VERSION VERSION_LESS 18.0)
     message(FATAL_ERROR "MS Visual Studio version must be at least 18.0")
   endif()
 endif()
 
 # C++ compiler settings
-if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
-  set(FLAGS "/Ox /wd4715 /wd4996")
-else ()
+if(MSVC)
+  set(FLAGS "/Ox")
+  set(FLAGS "${FLAGS} /wd4715 /wd4996")
+else()
   set(FLAGS "-O3 -std=c++11")
-  if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
+  if(CMAKE_CXX_COMPILER_ID STREQUAL GNU)
     set(FLAGS "${FLAGS} -Wall -Wno-comment")
-    if (CMAKE_CXX_COMPILER_VERSION VERSION_LESS 4.8.4)
+    if(CMAKE_CXX_COMPILER_VERSION VERSION_LESS 4.8.4)
       set(FLAGS "${FLAGS} -Wno-attributes")
     endif()
-  elseif ("${CMAKE_CXX_COMPILER_ID}" MATCHES "Clang")
-    set(FLAGS "${FLAGS} -Wextra")
+  elseif(CMAKE_CXX_COMPILER_ID MATCHES Clang)
+    set(FLAGS "${FLAGS} -Wextra -Wno-c++98-compat -Wno-c++98-compat-pedantic")
   endif()
 endif()
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${FLAGS}")
